[tool.poetry]
name = "forum"
version = "0.1.0"
description = "Learning fastAPI"
authors = ["Michal Piotrowski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
black = "^22.12.0"
isort = "^5.11.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
